<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <TextView
            android:id="@+id/addCourseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_dept_abr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_dept_abr"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/field_dept_abr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_course_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_course_number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/field_course_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_teacher_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/field_teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.99" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_credit_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_credit_hours"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />

            <EditText
                android:id="@+id/field_credit_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33" 
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_grading_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_grading_style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lbl_percentage" />

                <RadioButton
                    android:id="@+id/radio_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_points" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_assignment_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_assignment_types"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/field_assignment_types"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/none"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/bAddAssignmentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_add_assignment_type" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_setup"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/bSetUpScale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_up" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bCancel"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/bSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/submit" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>